feature: TRACEFOSS-1230 refactored for batch aspect model